--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
   },
   "woocommerce": {
     "url": "https://jouwwebshop.nl",
-    "consumer_key": "JOUW_WC_KEY",
-    "consumer_secret": "JOUW_WC_SECRET"
+    "consumer_key": "ck_ba3c6271a369557dfe02ab79cb05c1da69f9316a",
+    "consumer_secret": "cs_f56524b18256d3848d6ea85748944f6834c657ce"
   }
 }
