--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "bol": {
-    "client_id": "JOUW_BOL_CLIENT_ID",
-    "client_secret": "JOUW_BOL_CLIENT_SECRET"
+    "client_id": "795e72bf-1454-4a6d-9797-92647b223526",
+    "client_secret": "q!zDXAxkfEHK6zE0JuG1BkcfFj?1g)jCVBd?OZOAdcb50EFHuYoa4iO@W0)QBi+5"
   },
   "woocommerce": {
     "url": "https://pochon.nl",
