--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "bol": {
-    "client_id": "795e72bf-1454-4a6d-9797-92647b223526",
-    "client_secret": "q!zDXAxkfEHK6zE0JuG1BkcfFj?1g)jCVBd?OZOAdcb50EFHuYoa4iO@W0)QBi+5"
+    "client_id": "c0c9b1cd-f2e5-4836-b081-3ea37d07486d",
+    "client_secret": "Zc4g+6eDrjYGG)iWfth7lQbWLV6Rr0weM41@vjh7sOJ@K7LUVLR4Yy1gIzkWyqqv"
   },
   "woocommerce": {
     "url": "https://pochon.nl",
